feat: Update page title and description for personal branding

--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 ---
-title: "Melbourne Machine Learning Engineer | Geospatial & Computer Vision"
+title: "Alan Huynh | Machine Learning Engineer | Geospatial & Computer Vision"
 description: "Alan Huynh is a Melbourne-based Machine Learning Engineer specializing in geospatial analysis, computer vision, and automation. Explore his portfolio, blog, and innovative projects involving geospatial temporal and environmental data."
 
 permalink: "/"
