--- a/src/index.html
+++ b/src/index.html
@@ -37,11 +37,10 @@ eleventyNavigation:
 
 <section id="hero">
   <div class="container">
-    <h1 class="title">Hi, I'm Alan.</h1>
     <p class="text">
-      <span>Machine Learning</span> Engineer in <span>Geospatial</span> and
-      <span>Computer Vision</span>.
+      Automation & AI for Climate, Compliance, and Business.
     </p>
+    <h1 class="title">Hi, I'm Alan.</h1>
     <div class="social-section">
       <h2 class="topper">My Social</h2>
       <div class="social-icons">
