feat(ui): Do some makeup

--- a/src/content/pages/blog.html
+++ b/src/content/pages/blog.html
@@ -65,7 +65,7 @@ eleventyNavigation:
         </div>
         <h2 class="blog-h1">{{ post.data.title }}</h2>
         <p class="blog-desc">{{ post.data.description }}</p>
-        <a href="{{ post.url }}" class="blog-link">Continue Reading</a>
+        <a href="{{ post.url }}" class="button">Continue Reading</a>
       </div>
     </article>
     {%- endfor -%} {% endif %}
