--- a/src/content/pages/project.html
+++ b/src/content/pages/project.html
@@ -67,7 +67,7 @@ eleventyNavigation:
         </div>
         <h2 class="blog-h1">{{ project.data.title }}</h2>
         <p class="blog-desc">{{ project.data.description }}</p>
-        <a href="{{ project.url }}" class="blog-link">Continue Reading</a>
+        <a href="{{ project.url }}" class="button">View Project</a>
       </div>
     </article>
     {%- endfor -%} {% endif %}
