--- a/src/index.html
+++ b/src/index.html
@@ -178,9 +178,7 @@ eleventyNavigation:
         Outside of tech, I am a musician, hiker, and rhythm game enthusiast.
       </p>
       <a
-        href="/assets/images/blog/alan-huynh-resume.pdf"
-        target="_blank"
-        rel="noopener noreferrer"
+        href="/about"
         class="button-solid"
         >More About Me</a
       >
