fix(ui): Make button fit text

--- a/src/index.html
+++ b/src/index.html
@@ -105,7 +105,7 @@ eleventyNavigation:
             <p class="topper-small">{{ project.data.tags[2] }}</p>
             <h3 class="h4">{{ project.data.title }}</h3>
             <p class="desc">{{ project.data.description }}</p>
-            <a href="{{ project.url }}" class="button">Read more</a>
+            <a class="button">Read more</a>
           </div>
         </a>
       </li>
